# pivot

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DAG_IMPLEMENTATION_PLAN.md  INVESTIGATION_AND_FIX_PLAN.md  README.md  coverage.json  mkdocs.yml  pyproject.toml  signal-handler-thread-textual-tui-20260203.md
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: docs.yml  pr-and-main.yaml  release.yaml
.pivot/state.lmdb/: data.mdb  lock.mdb
.sisyphus/: boulder.json
.sisyphus/plans/: tui-package-extraction.md
docs/: change-detection-analysis.md  change-detection-design.md  comparison.md  contributing.md  eval-pipeline-comparison.md  fingerprinting.md  gen_ref_pages.py  index.md  migrating-from-dvc.md  test-coverage-analysis-2026-02-03.md  test-coverage-review-2026-01-31.md
docs/architecture/: agent-server.md  code-tour.md  engine.md  execution.md  fingerprinting.md  overview.md  reactive.md  tui.md  watch.md
docs/archived/: DAG_IMPLEMENTATION_PLAN.md
docs/brainstorms/: 2026-01-31-reader-writer-split-brainstorm.md  2026-02-04-auto-resolve-sibling-deps-root-brainstorm.md
docs/cli/: index.md
docs/contributing/: cli.md  loaders.md  testing.md
docs/design/: hot-reload-exploration.md  watch-engine.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: caching.md  configuration.md  dvc-compat.md  loaders.md  matrix.md  outputs.md  parameters.md  stages.md  troubleshooting.md  watch.md
docs/reference/: dependencies.md  (+6 more)
experiments/: declarative_advanced.py  declarative_options.py  edge_case_container_instances.py  edge_case_fingerprint.py  edge_case_fingerprint_additional.py  edge_case_fingerprint_final.py  edge_case_fingerprint_v2.py  edge_case_fingerprint_v3.py  summary.py  test_alternative_approaches.py  test_change_detection.py  test_getclosurevars_approach.py  test_global_func_loop_register.py  test_loky_pickle.py  test_loop_stages.py  test_pickle_exact.py  test_pivot_loop_stages.py  tmp-thing.py
scripts/: generate_stubs.py  test_reactive_engine.py  test_watch_engine.py
src/: CLAUDE.md
tests/: CLAUDE.md  conftest.py  helpers.py  test_cache.py  test_change_detection.py  test_cli.py  test_cli_checkout.py  test_cli_export.py  test_cli_track.py  test_config.py  test_config_schema.py  test_dag.py  test_dag_topologies.py  test_data.py  test_data_tui.py  test_dep_injection.py  test_directory_out_integration.py  test_dvc_compat.py  test_dvc_compat_integration.py  test_dvc_import.py  test_executor.py  test_executor_pvt.py  test_executor_worker.py  test_explain.py  test_file_out_integration.py  test_fingerprint.py  test_get.py  test_git.py  test_google_style.py  test_incremental_out.py  test_loaders.py  test_lock.py  test_metrics.py  test_outputs.py  test_params.py  test_path_overlap.py  test_path_utils.py  test_placeholder_dep.py  test_plots.py  test_project_root.py  (+14 more)
(+412 files in other folders)
