[project]
name = "fastpipe"
version = "0.1.0-dev"
description = "High-performance Python pipeline tool with automatic code change detection"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "TBD" }
authors = [{ name = "Internal Team" }]
dependencies = [
    "click>=8.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "xxhash>=3.0",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.0",
    "pytest-cov>=4.0",
    "pytest-watch>=4.2",
    "pytest>=7.0",
    "ruff>=0.8.0",
]

[project.scripts]
fastpipe = "fastpipe.cli:cli"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

# Ruff configuration (linting and formatting)
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
exclude = ["experiments"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TCH", # type-checking imports
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]
ignore = [
    "E501", # line too long (handled by formatter)
    "N801", # class name `stage` is intentionally lowercase (decorator pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "C401",   # generator vs comprehension (readability)
    "F811",   # redef allowed in tests (fixtures)
    "N806",   # variable naming (CONSTANT test fixtures)
    "S101",   # assert allowed in tests
    "SIM103", # simplification suggestions (readability)
    "SIM118", # dict.keys() usage (readability)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Basedpyright configuration
[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
include = ["src"]
exclude = ["experiments", "**/__pycache__"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/fastpipe",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmarks",
]

[tool.coverage.run]
source = ["src/fastpipe"]
branch = true
parallel = true
omit = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
